# research-it

./: .gitignore  README.md  app_streamlit.py  pyproject.toml  research-it.py
data/: A Comprehensive Survey of Forgetting in Deep Learning Beyond Continual Learning.txt
indexes/: arxiv-2307-09218.index  arxiv-2307-09218.leann.meta.json  arxiv-2307-09218.leann.passages.idx  arxiv-2307-09218.leann.passages.jsonl
scripts/: setup.ps1  setup.sh
src/: config.py
src/index/: build_any.py  build_from_url.py  build_index.py
src/ingest/: chunking.py  fetchers.py  files.py  html.py  loaders.py  pdf.py
src/rag/: chat_cli.py  pipeline.py
